--- a/src/locales/en/layers_weather.json
+++ b/src/locales/en/layers_weather.json
@@ -398,6 +398,21 @@
   "CanSIPS_100km_AirTemp-ProbNearNormal-2m_P03M-P05M": "Probability of temperature near normal - Months 3-5 [%]",
   "CanSIPS_100km_AirTemp-ProbNearNormal-2m_P06M-P08M": "Probability of temperature near normal - Months 6-8 [%]",
   "CanSIPS_100km_AirTemp-ProbNearNormal-2m_P09M-P11M": "Probability of temperature near normal - Months 9-11 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P00M-P02M": "Probability of precipitation above normal - Months 0-2 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P01M-P03M": "Probability of precipitation above normal - Months 1-3 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P03M-P05M": "Probability of precipitation above normal - Months 3-5 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P06M-P08M": "Probability of precipitation above normal - Months 6-8 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P09M-P11M": "Probability of precipitation above normal - Months 9-11 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P00M-P02M": "Probability of precipitation below normal - Months 0-2 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P01M-P03M": "Probability of precipitation below normal - Months 1-3 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P03M-P05M": "Probability of precipitation below normal - Months 3-5 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P06M-P08M": "Probability of precipitation below normal - Months 6-8 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P09M-P11M": "Probability of precipitation below normal - Months 9-11 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P00M-P02M": "Probability of precipitation near normal - Months 0-2[%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P01M-P03M": "Probability of precipitation near normal - Months 1-3 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P03M-P05M": "Probability of precipitation near normal - Months 3-5 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P06M-P08M": "Probability of precipitation near normal - Months 6-8 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P09M-P11M": "Probability of precipitation near normal - Months 9-11 [%]",
   "CanSIPS_100km_PrecipRate-ProbAboveNormal-2m_P00M-P02M": "Probability of precipitation above normal - Months 0-2 [%]",
   "CanSIPS_100km_PrecipRate-ProbAboveNormal-2m_P01M-P03M": "Probability of precipitation above normal - Months 1-3 [%]",
   "CanSIPS_100km_PrecipRate-ProbAboveNormal-2m_P03M-P05M": "Probability of precipitation above normal - Months 3-5 [%]",
@@ -1934,6 +1949,8 @@
   "GOES-West_1km_NaturalColor": "GOES-West Natural Color [1 km]",
   "GOES-West_2km_NightIR": "GOES-West NightIR [2 km]",
   "GOES-West_2km_NightMicrophysics": "GOES-West Night Microphysics [2 km]",
+  "HRDPA-Prelim_2.5km_Precip-Accum24h-T12Z": "HRDPA-Prelim.24 - Quantity of precipitation (preliminary) - T12Z [mm]",
+  "HRDPA-Prelim_2.5km_Precip-Accum6h": "HRDPA-Prelim.06 - Quantity of precipitation (preliminary) [mm]",
   "HRDPA.06F_WATERSHED": "HRDPA.06F - Average watershed precipitation [mm]",
   "HRDPA.06P_WATERSHED": "HDRPA.06P - Average watershed precipitation (preliminary) [mm]",
   "HRDPA.24F_PR": "HRDPA.24F - Quantity of precipitation [mm]",
@@ -1942,6 +1959,8 @@
   "HRDPA.24P_WATERSHED": "HRDPA.24P - Average watershed precipitation (preliminary) [mm]",
   "HRDPA.6F_PR": "HRDPA.06F - Quantity of precipitation [mm]",
   "HRDPA.6P_PR": "HRDPA.06P - Quantity of precipitation (preliminary) [mm]",
+  "HRDPA_2.5km_Precip-Accum24h-T06Z": "HRDPA.24 - Quantity of precipitation - T06Z [mm]",
+  "HRDPA_2.5km_Precip-Accum6h": "HRDPA.06 - Quantity of precipitation [mm]",
   "HRDPS-WEonG_2.5km_AirTemp": "HRDPS-WEonG - Temperature [°C]",
   "HRDPS-WEonG_2.5km_BlowingSnow-Prob": "HRDPS-WEonG - Probability of blowing snow [%]",
   "HRDPS-WEonG_2.5km_BlowingSnowPresence": "HRDPS-WEonG - Presence of blowing snow",
@@ -2250,6 +2269,7 @@
   "HRDPS.CONTINENTAL_AS": "HRDPS.CONTINENTAL - Net shortwave accumulated radiation flux at the surface [J/m²]",
   "HRDPS.CONTINENTAL_BE": "HRDPS.CONTINENTAL - Convective available potential energy [J/kg]",
   "HRDPS.CONTINENTAL_BE-CONTOUR": "HRDPS.CONTINENTAL - Convective available potential energy (contour) [J/kg]",
+  "HRDPS.CONTINENTAL_CVI": "HRDPS.CONTINENTAL - Ventilation Index",
   "HRDPS.CONTINENTAL_DN": "HRDPS.CONTINENTAL - Snow density [kg/m³]",
   "HRDPS.CONTINENTAL_DZ": "HRDPS.CONTINENTAL - Thickness between 1000mb and 500mb [m]",
   "HRDPS.CONTINENTAL_EI": "HRDPS.CONTINENTAL - Upward longwave radiation flux at the top of atmosphere [W/m²]",
@@ -2583,6 +2603,7 @@
   "HURRICANE_RESPONSE_ZONE": "Hurricane Response Zone",
   "Lightning_2.5km_Density": "Lightning Flash Density over Canada (2.5 km) [flash/km²/min]",
   "METNOTES": "MetNotes",
+  "Marine-Standard-Forecast-Zones": "Marine Standard Forecast Zones",
   "OCEAN.GIOPS.2D_DIVI": "OCEAN.GIOPS.2D - Sea ice divergence [%/day]",
   "OCEAN.GIOPS.2D_GE": "OCEAN.GIOPS.2D - Volume of sea ice per unit grid cell [m]",
   "OCEAN.GIOPS.2D_GL": "OCEAN.GIOPS.2D - Sea ice fraction",
@@ -2748,6 +2769,7 @@
   "OCEAN.GIOPS.3D_UU2W_4833": "OCEAN.GIOPS.3D - Ocean current - 4833m [m/s]",
   "OCEAN.GIOPS.3D_UU2W_5275": "OCEAN.GIOPS.3D - Ocean current - 5275m [m/s]",
   "OCEAN.GIOPS.3D_UU2W_5728": "OCEAN.GIOPS.3D - Ocean current - 5728m [m/s]",
+  "Public-Standard-Forecast-Zones": "Public Standard Forecast Zones",
   "RADAR_1KM_RRAI": "Radar precipitation rate for rain [mm/h]",
   "RADAR_1KM_RSNO": "Radar precipitation rate for snow [cm/h]",
   "RADAR_COVERAGE_RRAI": "Dynamic radar coverage for rain",
@@ -2803,6 +2825,8 @@
   "RDAQA.CE_SO2-YAvg": "Yearly average of surface SO2 [ppbv]",
   "RDAQA.CE_SO2-YAvg-DMax": "Yearly average of daily maximum of surface SO2 [ppbv]",
   "RDPA-Prelim_10km_Precip-Accum24h": "RDPA - Quantity of precipitation over a 24h hour interval (preliminary) [mm] [10 km]",
+  "RDPA-Prelim_10km_Precip-Accum24h-T06Z": "RDPA - Quantity of precipitation over a 24h hour interval (preliminary) - T06Z [mm] [10 km]",
+  "RDPA-Prelim_10km_Precip-Accum24h-T12Z": "RDPA - Quantity of precipitation over a 24h hour interval (preliminary) - T12Z [mm] [10 km]",
   "RDPA-Prelim_10km_Precip-Accum6h": "RDPA - Quantity of precipitation over a 6h hour interval (preliminary) [mm] [10 km]",
   "RDPA.24F_PR": "RDPA.24F - Quantity of precipitation [mm] [10 km] (archive)",
   "RDPA.24P_PR": "RDPA.24P - Quantity of precipitation (preliminary) [mm] [10 km] (archive)",
@@ -2811,6 +2835,8 @@
   "RDPA.ARC_15km.24F_PR": "RDPA.ARC_15km.24F - Quantity of precipitation [mm] [15 km] (archive)",
   "RDPA.ARC_15km.6F_PR": "RDPA.ARC_15km.6F - Quantity of precipitation [mm] [15 km] (archive)",
   "RDPA_10km_Precip-Accum24h": "RDPA - Quantity of precipitation over a 24h hour interval [mm] [10 km] (archive)",
+  "RDPA_10km_Precip-Accum24h-T06Z": "RDPA - Quantity of precipitation over a 24h hour interval [mm] - T06Z [10 km] (archive)",
+  "RDPA_10km_Precip-Accum24h-T12Z": "RDPA - Quantity of precipitation over a 24h hour interval [mm] - T12Z [10 km] (archive)",
   "RDPA_10km_Precip-Accum6h": "RDPA - Quantity of precipitation over a 6h hour interval [mm] [10 km] (archive)",
   "RDPS-WEonG_10km_AirTemp": "RDPS-WEonG - Temperature [°C]",
   "RDPS-WEonG_10km_BlowingSnow-Prob": "RDPS-WEonG - Probability of blowing snow [%]",
@@ -3014,26 +3040,64 @@
   "RDPS.PRES_GZ.100-CONTOUR": "RDPS.PRES - Geopotential height at 100.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.1000": "RDPS.PRES - Geopotential height at 1000.0 mb [gpm]",
   "RDPS.PRES_GZ.1000-CONTOUR": "RDPS.PRES - Geopotential height at 1000.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.1015": "RDPS.PRES - Geopotential height at 1015.0 mb [gpm]",
+  "RDPS.PRES_GZ.1015-CONTOUR": "RDPS.PRES - Geopotential height at 1015.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.150": "RDPS.PRES - Geopotential height at 150.0 mb [gpm]",
+  "RDPS.PRES_GZ.150-CONTOUR": "RDPS.PRES - Geopotential height at 150.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.175": "RDPS.PRES - Geopotential height at 175.0 mb [gpm]",
+  "RDPS.PRES_GZ.175-CONTOUR": "RDPS.PRES - Geopotential height at 175.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.20": "RDPS.PRES - Geopotential height at 20.0 mb [gpm]",
   "RDPS.PRES_GZ.20-CONTOUR": "RDPS.PRES - Geopotential height at 20.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.200": "RDPS.PRES - Geopotential height at 200.0 mb [gpm]",
   "RDPS.PRES_GZ.200-CONTOUR": "RDPS.PRES - Geopotential height at 200.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.225": "RDPS.PRES - Geopotential height at 225.0 mb [gpm]",
+  "RDPS.PRES_GZ.225-CONTOUR": "RDPS.PRES - Geopotential height at 225.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.250": "RDPS.PRES - Geopotential height at 250.0 mb [gpm]",
   "RDPS.PRES_GZ.250-CONTOUR": "RDPS.PRES - Geopotential height at 250.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.275": "RDPS.PRES - Geopotential height at 275.0 mb [gpm]",
+  "RDPS.PRES_GZ.275-CONTOUR": "RDPS.PRES - Geopotential height at 275.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.30": "RDPS.PRES - Geopotential height at 30.0 mb [gpm]",
   "RDPS.PRES_GZ.30-CONTOUR": "RDPS.PRES - Geopotential height at 30.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.300": "RDPS.PRES - Geopotential height at 300.0 mb [gpm]",
+  "RDPS.PRES_GZ.300-CONTOUR": "RDPS.PRES - Geopotential height at 300.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.350": "RDPS.PRES - Geopotential height at 350.0 mb [gpm]",
+  "RDPS.PRES_GZ.350-CONTOUR": "RDPS.PRES - Geopotential height at 350.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.400": "RDPS.PRES - Geopotential height at 400.0 mb [gpm]",
+  "RDPS.PRES_GZ.400-CONTOUR": "RDPS.PRES - Geopotential height at 400.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.450": "RDPS.PRES - Geopotential height at 450.0 mb [gpm]",
+  "RDPS.PRES_GZ.450-CONTOUR": "RDPS.PRES - Geopotential height at 450.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.5": "RDPS.PRES - Geopotential height at 5.0 mb [gpm]",
   "RDPS.PRES_GZ.5-CONTOUR": "RDPS.PRES - Geopotential height at 5.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.50": "RDPS.PRES - Geopotential height at 50.0 mb [gpm]",
   "RDPS.PRES_GZ.50-CONTOUR": "RDPS.PRES - Geopotential height at 50.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.500": "RDPS.PRES - Geopotential height at 500.0 mb [gpm]",
   "RDPS.PRES_GZ.500-CONTOUR": "RDPS.PRES - Geopotential height at 500.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.550": "RDPS.PRES - Geopotential height at 550.0 mb [gpm]",
+  "RDPS.PRES_GZ.550-CONTOUR": "RDPS.PRES - Geopotential height at 550.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.600": "RDPS.PRES - Geopotential height at 600.0 mb [gpm]",
+  "RDPS.PRES_GZ.600-CONTOUR": "RDPS.PRES - Geopotential height at 600.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.650": "RDPS.PRES - Geopotential height at 650.0 mb [gpm]",
+  "RDPS.PRES_GZ.650-CONTOUR": "RDPS.PRES - Geopotential height at 650.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.700": "RDPS.PRES - Geopotential height at 700.0 mb [gpm]",
   "RDPS.PRES_GZ.700-CONTOUR": "RDPS.PRES - Geopotential height at 700.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.750": "RDPS.PRES - Geopotential height at 750.0 mb [gpm]",
+  "RDPS.PRES_GZ.750-CONTOUR": "RDPS.PRES - Geopotential height at 750.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.800": "RDPS.PRES - Geopotential height at 800.0 mb [gpm]",
+  "RDPS.PRES_GZ.800-CONTOUR": "RDPS.PRES - Geopotential height at 800.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.850": "RDPS.PRES - Geopotential height at 850.0 mb [gpm]",
   "RDPS.PRES_GZ.850-CONTOUR": "RDPS.PRES - Geopotential height at 850.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.875": "RDPS.PRES - Geopotential height at 875.0 mb [gpm]",
+  "RDPS.PRES_GZ.875-CONTOUR": "RDPS.PRES - Geopotential height at 875.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.900": "RDPS.PRES - Geopotential height at 900.0 mb [gpm]",
+  "RDPS.PRES_GZ.900-CONTOUR": "RDPS.PRES - Geopotential height at 900.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.925": "RDPS.PRES - Geopotential height at 925.0 mb [gpm]",
   "RDPS.PRES_GZ.925-CONTOUR": "RDPS.PRES - Geopotential height at 925.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.950": "RDPS.PRES - Geopotential height at 950.0 mb [gpm]",
+  "RDPS.PRES_GZ.950-CONTOUR": "RDPS.PRES - Geopotential height at 950.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.970": "RDPS.PRES - Geopotential height at 970.0 mb [gpm]",
+  "RDPS.PRES_GZ.970-CONTOUR": "RDPS.PRES - Geopotential height at 970.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.985": "RDPS.PRES - Geopotential height at 985.0 mb [gpm]",
+  "RDPS.PRES_GZ.985-CONTOUR": "RDPS.PRES - Geopotential height at 985.0 mb (contour) [gpm]",
   "RDPS.PRES_HR.10": "RDPS.PRES - Relative humidity at 10.0 mb [0-1]",
   "RDPS.PRES_HR.100": "RDPS.PRES - Relative humidity at 100.0 mb [0-1]",
   "RDPS.PRES_HR.1000": "RDPS.PRES - Relative humidity at 1000.0 mb [0-1]",
@@ -3365,11 +3429,11 @@
   "REPS.DIAG.12_PRMM.ERC75": "REPS.DIAG.12_PRMM.ERC75 - Quantity of precipitation (75th percentile)",
   "REPS.DIAG.12_PRMM.ERC90": "REPS.DIAG.12_PRMM.ERC90 - Quantity of precipitation (90th percentile)",
   "REPS.DIAG.12_PRMM.ERGE0.2": "REPS.DIAG.12_PRMM.ERGE0.2 - Quantity of precipitation >= 0.2 mm [probability %]",
-  "REPS.DIAG.12_PRMM.ERGE0.5": "REPS.DIAG.12_PRMM.ERGE0.5 - Quantity of precipitation >= 0.5 mm [probability %]",
   "REPS.DIAG.12_PRMM.ERGE1": "REPS.DIAG.12_PRMM.ERGE1 - Quantity of precipitation >= 1 mm [probability %]",
   "REPS.DIAG.12_PRMM.ERGE10": "REPS.DIAG.12_PRMM.ERGE10 - Quantity of precipitation >= 10 mm [probability %]",
   "REPS.DIAG.12_PRMM.ERGE100": "REPS.DIAG.12_PRMM.ERGE100 - Quantity of precipitation >= 100 mm [probability %]",
   "REPS.DIAG.12_PRMM.ERGE15": "REPS.DIAG.12_PRMM.ERGE15 - Quantity of precipitation >= 15 mm [probability %]",
+  "REPS.DIAG.12_PRMM.ERGE150": "REPS.DIAG.12_PRMM.ERGE150 - Quantity of precipitation >= 150 mm [probability %]",
   "REPS.DIAG.12_PRMM.ERGE2.5": "REPS.DIAG.12_PRMM.ERGE2.5 - Quantity of precipitation >= 2.5 mm [probability %]",
   "REPS.DIAG.12_PRMM.ERGE20": "REPS.DIAG.12_PRMM.ERGE20 - Quantity of precipitation >= 20 mm [probability %]",
   "REPS.DIAG.12_PRMM.ERGE25": "REPS.DIAG.12_PRMM.ERGE25 - Quantity of precipitation >= 25 mm [probability %]",
