--- a/src/locales/fr/layers_weather.json
+++ b/src/locales/fr/layers_weather.json
@@ -398,6 +398,21 @@
   "CanSIPS_100km_AirTemp-ProbNearNormal-2m_P03M-P05M": "Probabilités prévues de températures près de la normale - Mois 3-5 [%]",
   "CanSIPS_100km_AirTemp-ProbNearNormal-2m_P06M-P08M": "Probabilités prévues de températures près de la normale - Mois 6-8 [%]",
   "CanSIPS_100km_AirTemp-ProbNearNormal-2m_P09M-P11M": "Probabilités prévues de températures près de la normale - Mois 9-11 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P00M-P02M": "Probabilités prévues de précipitations au dessus la normale - Mois 0-2 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P01M-P03M": "Probabilités prévues de précipitations au dessus la normale - Mois 1-3 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P03M-P05M": "Probabilités prévues de précipitations au dessus la normale - Mois 3-5 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P06M-P08M": "Probabilités prévues de précipitations au dessus la normale - Mois 6-8 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbAboveNormal-2m_P09M-P11M": "Probabilités prévues de précipitations au dessus la normale - Mois 9-11 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P00M-P02M": "Probabilités prévues de précipitations sous la normale - Mois 0-2 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P01M-P03M": "Probabilités prévues de précipitations sous la normale - Mois 1-3 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P03M-P05M": "Probabilités prévues de précipitations sous la normale - Mois 3-5 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P06M-P08M": "Probabilités prévues de précipitations sous la normale - Mois 6-8 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbBelowNormal-2m_P09M-P11M": "Probabilités prévues de précipitations sous la normale - Mois 9-11 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P00M-P02M": "Probabilités prévues de précipitations près de la normale - Mois 0-2 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P01M-P03M": "Probabilités prévues de précipitations près de la normale - Mois 1-3 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P03M-P05M": "Probabilités prévues de précipitations près de la normale - Mois 3-5 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P06M-P08M": "Probabilités prévues de précipitations près de la normale - Mois 6-8 [%]",
+  "CanSIPS_100km_PrecipAccum-ProbNearNormal-2m_P09M-P11M": "Probabilités prévues de précipitations près de la normale - Mois 9-11 [%]",
   "CanSIPS_100km_PrecipRate-ProbAboveNormal-2m_P00M-P02M": "Probabilités prévues de précipitations au dessus la normale - Mois 0-2 [%]",
   "CanSIPS_100km_PrecipRate-ProbAboveNormal-2m_P01M-P03M": "Probabilités prévues de précipitations au dessus la normale - Mois 1-3 [%]",
   "CanSIPS_100km_PrecipRate-ProbAboveNormal-2m_P03M-P05M": "Probabilités prévues de précipitations au dessus la normale - Mois 3-5 [%]",
@@ -1934,6 +1949,8 @@
   "GOES-West_1km_NaturalColor": "GOES-Ouest Couleur naturelle [1 km]",
   "GOES-West_2km_NightIR": "GOES-Ouest IR de nuit [2 km]",
   "GOES-West_2km_NightMicrophysics": "GOES-Ouest Microphysique de nuit [2 km]",
+  "HRDPA-Prelim_2.5km_Precip-Accum24h-T12Z": "AHRDP-Prélim.24P - Quantité de précipitations (préliminaire) - T12Z [mm]",
+  "HRDPA-Prelim_2.5km_Precip-Accum6h": "AHRDP-Prélim.06 - Quantité de précipitations (préliminaire) [mm]",
   "HRDPA.06F_WATERSHED": "AHRDP.06F - Précipitations moyennes par bassin-versant [mm]",
   "HRDPA.06P_WATERSHED": "AHRDP.06P - Précipitations moyennes par bassin-versant (préliminaire) [mm]",
   "HRDPA.24F_PR": "AHRDP.24F - Quantité de précipitations [mm]",
@@ -1942,6 +1959,8 @@
   "HRDPA.24P_WATERSHED": "AHRDP.24P - Précipitations moyennes par bassin-versant (préliminaire) [mm]",
   "HRDPA.6F_PR": "AHRDP.06F - Quantité de précipitations [mm]",
   "HRDPA.6P_PR": "AHRDP.06P - Quantité de précipitations (préliminaire) [mm]",
+  "HRDPA_2.5km_Precip-Accum24h-T06Z": "AHRDP.24 - Quantité de précipitations - T06Z [mm]",
+  "HRDPA_2.5km_Precip-Accum6h": "AHRDP.06 - Quantité de précipitations [mm]",
   "HRDPS-WEonG_2.5km_AirTemp": "HRDPS-WEonG - Température [°C]",
   "HRDPS-WEonG_2.5km_BlowingSnow-Prob": "HRDPS-WEonG - Probabilité de poudrerie [%]",
   "HRDPS-WEonG_2.5km_BlowingSnowPresence": "HRDPS-WEonG - Présence de poudrerie",
@@ -2250,6 +2269,7 @@
   "HRDPS.CONTINENTAL_AS": "HRDPS.CONTINENTAL - Flux radiatif accumulé d'ondes courtes net à la surface [J/m²]",
   "HRDPS.CONTINENTAL_BE": "HRDPS.CONTINENTAL - Énergie potentielle convective disponible [J/kg]",
   "HRDPS.CONTINENTAL_BE-CONTOUR": "HRDPS.CONTINENTAL - Énergie potentielle convective disponible (contour) [J/kg]",
+  "HRDPS.CONTINENTAL_CVI": "HRDPS.CONTINENTAL - Indice de ventilation",
   "HRDPS.CONTINENTAL_DN": "HRDPS.CONTINENTAL - Densité de la neige [kg/m³]",
   "HRDPS.CONTINENTAL_DZ": "HRDPS.CONTINENTAL - Épaisseur entre 1000mb et 500mb [m]",
   "HRDPS.CONTINENTAL_EI": "HRDPS.CONTINENTAL - Flux radiatif d'ondes longues ascendant au sommet de l'atmosphère [W/m²]",
@@ -2583,6 +2603,7 @@
   "HURRICANE_RESPONSE_ZONE": "Zone de réaction aux ouragans",
   "Lightning_2.5km_Density": "Densité de foudre sur le Canada (2.5 km) [flash/km²/min]",
   "METNOTES": "MetNotes",
+  "Marine-Standard-Forecast-Zones": "Zones standards de prévision marine",
   "OCEAN.GIOPS.2D_DIVI": "OCEAN-GIOPS.2D - Divergence de la glace de mer [%/jour]",
   "OCEAN.GIOPS.2D_GE": "OCEAN.GIOPS.2D - Volume de glace de mer par unité de surface de cellule de la grille [m]",
   "OCEAN.GIOPS.2D_GL": "OCEAN.GIOPS.2D - Fraction de glace marine",
@@ -2748,6 +2769,7 @@
   "OCEAN.GIOPS.3D_UU2W_4833": "OCEAN.GIOPS.3D - Courant océanique - 4833m [m/s]",
   "OCEAN.GIOPS.3D_UU2W_5275": "OCEAN.GIOPS.3D - Courant océanique - 5275m [m/s]",
   "OCEAN.GIOPS.3D_UU2W_5728": "OCEAN.GIOPS.3D - Courant océanique - 5728m [m/s]",
+  "Public-Standard-Forecast-Zones": "Zones standards de prévision publiques",
   "RADAR_1KM_RRAI": "Taux de précipitation radar pour la pluie [mm/h]",
   "RADAR_1KM_RSNO": "Taux de précipitation radar pour la neige [cm/h]",
   "RADAR_COVERAGE_RRAI": "Couverture radar dynamique pour la pluie",
@@ -2803,6 +2825,8 @@
   "RDAQA.CE_SO2-YAvg": "Moyenne annuelle de SO2 en surface [ppbv]",
   "RDAQA.CE_SO2-YAvg-DMax": "Moyenne annuelle du maximum journalier de SO2 en surface [ppbv]",
   "RDPA-Prelim_10km_Precip-Accum24h": "ARDP - Quantité de précipitations sur un intervalle de 24 heures (préliminaire) [mm] [10 km]",
+  "RDPA-Prelim_10km_Precip-Accum24h-T06Z": "ARDP - Quantité de précipitations sur un intervalle de 24 heures (préliminaire) - T06Z [mm] [10 km]",
+  "RDPA-Prelim_10km_Precip-Accum24h-T12Z": "ARDP - Quantité de précipitations sur un intervalle de 24 heures (préliminaire) - T12Z [mm] [10 km]",
   "RDPA-Prelim_10km_Precip-Accum6h": "ARDP - Quantité de précipitations sur un intervalle de 6 heures (préliminaire) [mm] [10 km]",
   "RDPA.24F_PR": "ARDP.24F - Quantité de précipitations [mm] [10 km] (archive)",
   "RDPA.24P_PR": "ARDP.24P - Quantité de précipitations (préliminaire) [mm] [10 km] (archive)",
@@ -2811,6 +2835,8 @@
   "RDPA.ARC_15km.24F_PR": "ARDP.ARC_15km.24F - Quantité de précipitations [mm] [15 km] (archive)",
   "RDPA.ARC_15km.6F_PR": "ARDP.ARC_15km.6F - Quantité de précipitations [mm] [15 km] (archive)",
   "RDPA_10km_Precip-Accum24h": "ARDP.24F - Quantité de précipitations sur un intervalle de 24 heures [mm] [10 km] (archive)",
+  "RDPA_10km_Precip-Accum24h-T06Z": "ARDP.24F - Quantité de précipitations sur un intervalle de 24 heures [mm] - T06Z [10 km] (archive)",
+  "RDPA_10km_Precip-Accum24h-T12Z": "ARDP.24F - Quantité de précipitations sur un intervalle de 24 heures [mm] - T12Z [10 km] (archive)",
   "RDPA_10km_Precip-Accum6h": "ARDP - Quantité de précipitations sur un intervalle de 6 heures [mm] [10 km] (archive)",
   "RDPS-WEonG_10km_AirTemp": "RDPS-WEonG - Température [°C]",
   "RDPS-WEonG_10km_BlowingSnow-Prob": "RDPS-WEonG - Probabilité de poudrerie [%]",
@@ -3014,26 +3040,64 @@
   "RDPS.PRES_GZ.100-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 100.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.1000": "RDPS.PRES - Hauteur géopotentielle à 1000.0 mb [gpm]",
   "RDPS.PRES_GZ.1000-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 1000.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.1015": "RDPS.PRES - Hauteur géopotentielle à 1015.0 mb [gpm]",
+  "RDPS.PRES_GZ.1015-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 1015.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.150": "RDPS.PRES - Hauteur géopotentielle à 150.0 mb [gpm]",
+  "RDPS.PRES_GZ.150-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 150.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.175": "RDPS.PRES - Hauteur géopotentielle à 175.0 mb [gpm]",
+  "RDPS.PRES_GZ.175-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 175.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.20": "RDPS.PRES - Hauteur géopotentielle à 20.0 mb [gpm]",
   "RDPS.PRES_GZ.20-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 20.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.200": "RDPS.PRES - Hauteur géopotentielle à 200.0 mb [gpm]",
   "RDPS.PRES_GZ.200-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 200.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.225": "RDPS.PRES - Hauteur géopotentielle à 225.0 mb [gpm]",
+  "RDPS.PRES_GZ.225-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 225.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.250": "RDPS.PRES - Hauteur géopotentielle à 250.0 mb [gpm]",
   "RDPS.PRES_GZ.250-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 250.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.275": "RDPS.PRES - Hauteur géopotentielle à 275.0 mb [gpm]",
+  "RDPS.PRES_GZ.275-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 275.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.30": "RDPS.PRES - Hauteur géopotentielle à 30.0 mb [gpm]",
   "RDPS.PRES_GZ.30-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 30.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.300": "RDPS.PRES - Hauteur géopotentielle à 300.0 mb [gpm]",
+  "RDPS.PRES_GZ.300-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 300.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.350": "RDPS.PRES - Hauteur géopotentielle à 350.0 mb [gpm]",
+  "RDPS.PRES_GZ.350-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 350.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.400": "RDPS.PRES - Hauteur géopotentielle à 400.0 mb [gpm]",
+  "RDPS.PRES_GZ.400-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 400.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.450": "RDPS.PRES - Hauteur géopotentielle à 450.0 mb [gpm]",
+  "RDPS.PRES_GZ.450-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 450.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.5": "RDPS.PRES - Hauteur géopotentielle à 5.0 mb [gpm]",
   "RDPS.PRES_GZ.5-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 5.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.50": "RDPS.PRES - Hauteur géopotentielle à 50.0 mb [gpm]",
   "RDPS.PRES_GZ.50-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 50.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.500": "RDPS.PRES - Hauteur géopotentielle à 500.0 mb [gpm]",
   "RDPS.PRES_GZ.500-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 500.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.550": "RDPS.PRES - Hauteur géopotentielle à 550.0 mb [gpm]",
+  "RDPS.PRES_GZ.550-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 550.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.600": "RDPS.PRES - Hauteur géopotentielle à 600.0 mb [gpm]",
+  "RDPS.PRES_GZ.600-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 600.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.650": "RDPS.PRES - Hauteur géopotentielle à 650.0 mb [gpm]",
+  "RDPS.PRES_GZ.650-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 650.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.700": "RDPS.PRES - Hauteur géopotentielle à 700.0 mb [gpm]",
   "RDPS.PRES_GZ.700-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 700.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.750": "RDPS.PRES - Hauteur géopotentielle à 750.0 mb [gpm]",
+  "RDPS.PRES_GZ.750-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 750.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.800": "RDPS.PRES - Hauteur géopotentielle à 800.0 mb [gpm]",
+  "RDPS.PRES_GZ.800-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 800.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.850": "RDPS.PRES - Hauteur géopotentielle à 850.0 mb [gpm]",
   "RDPS.PRES_GZ.850-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 850.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.875": "RDPS.PRES - Hauteur géopotentielle à 875.0 mb [gpm]",
+  "RDPS.PRES_GZ.875-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 875.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.900": "RDPS.PRES - Hauteur géopotentielle à 900.0 mb [gpm]",
+  "RDPS.PRES_GZ.900-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 900.0 mb (contour) [gpm]",
   "RDPS.PRES_GZ.925": "RDPS.PRES - Hauteur géopotentielle à 925.0 mb [gpm]",
   "RDPS.PRES_GZ.925-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 925.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.950": "RDPS.PRES - Hauteur géopotentielle à 950.0 mb [gpm]",
+  "RDPS.PRES_GZ.950-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 950.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.970": "RDPS.PRES - Hauteur géopotentielle à 970.0 mb [gpm]",
+  "RDPS.PRES_GZ.970-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 970.0 mb (contour) [gpm]",
+  "RDPS.PRES_GZ.985": "RDPS.PRES - Hauteur géopotentielle à 985.0 mb [gpm]",
+  "RDPS.PRES_GZ.985-CONTOUR": "RDPS.PRES - Hauteur géopotentielle à 985.0 mb (contour) [gpm]",
   "RDPS.PRES_HR.10": "RDPS.PRES - Humidité relative à 10.0 mb [0-1]",
   "RDPS.PRES_HR.100": "RDPS.PRES - Humidité relative à 100.0 mb [0-1]",
   "RDPS.PRES_HR.1000": "RDPS.PRES - Humidité relative à 1000.0 mb [0-1]",
@@ -3365,11 +3429,11 @@
   "REPS.DIAG.12_PRMM.ERC75": "REPS.DIAG.12_PRMM.ERC75 - Quantité de précipitations (75e centile)",
   "REPS.DIAG.12_PRMM.ERC90": "REPS.DIAG.12_PRMM.ERC90 - Quantité de précipitations (90e centile)",
   "REPS.DIAG.12_PRMM.ERGE0.2": "REPS.DIAG.12_PRMM.ERGE0.2 - Quantité de précipitations >= 0.2 mm [probabilité %]",
-  "REPS.DIAG.12_PRMM.ERGE0.5": "REPS.DIAG.12_PRMM.ERGE0.5 - Quantité de précipitations >= 0.5 mm [probabilité %]",
   "REPS.DIAG.12_PRMM.ERGE1": "REPS.DIAG.12_PRMM.ERGE1 - Quantité de précipitations >= 1 mm [probabilité %]",
   "REPS.DIAG.12_PRMM.ERGE10": "REPS.DIAG.12_PRMM.ERGE10 - Quantité de précipitations >= 10 mm [probabilité %]",
   "REPS.DIAG.12_PRMM.ERGE100": "REPS.DIAG.12_PRMM.ERGE100 - Quantité de précipitations >= 100 mm [probabilité %]",
   "REPS.DIAG.12_PRMM.ERGE15": "REPS.DIAG.12_PRMM.ERGE15 - Quantité de précipitations >= 15 mm [probabilité %]",
+  "REPS.DIAG.12_PRMM.ERGE150": "REPS.DIAG.12_PRMM.ERGE150 - Quantité de précipitations >= 150 mm [probabilité %]",
   "REPS.DIAG.12_PRMM.ERGE2.5": "REPS.DIAG.12_PRMM.ERGE2.5 - Quantité de précipitations >= 2.5 mm [probabilité %]",
   "REPS.DIAG.12_PRMM.ERGE20": "REPS.DIAG.12_PRMM.ERGE20 - Quantité de précipitations >= 20 mm [probabilité %]",
   "REPS.DIAG.12_PRMM.ERGE25": "REPS.DIAG.12_PRMM.ERGE25 - Quantité de précipitations >= 25 mm [probabilité %]",
