Auto refresh finally working

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -45,7 +45,7 @@
   "MadeWithAniMet": "Made with MSC AniMet",
   "Major_cities": "Canadian cities",
   "MapCustomizations": "Customize map",
-  "MissingTimesteps": "Some requested timesteps could not be retrieved. The temporal values have been updated.",
+  "MissingTimesteps": "Some timesteps have expired. The temporal values have been updated.",
   "ModelRun": "Model run",
   "MP4CreateButtonLabel": "Create animation",
   "MP4CreateCancelAnimationCreation": "Cancel",
