--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -45,7 +45,7 @@
   "MadeWithAniMet": "Créé avec AniMet du SMC",
   "Major_cities": "Villes canadiennes",
   "MapCustomizations": "Personnaliser la carte",
-  "MissingTimesteps": "Des pas de temps pour certaines couches sélectionnées ne sont pas disponibles. Les informations temporelles ont été mises à jour.",
+  "MissingTimesteps": "Certains pas de temps ont expiré. Les informations temporelles ont été mises à jour.",
   "ModelRun": "Passe du modèle",
   "MP4CreateButtonLabel": "Créer l'animation",
   "MP4CreateCancelAnimationCreation": "Annuler",
