Fixed bug, added CRS names, Changed share icon, changed zoom precision

--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -18,6 +18,10 @@
   "DarkBasemapSwitch": "Sombre",
   "DisplayLegend": "Afficher la légende",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
+  "EPSG:3857": "Web Mercator",
+  "EPSG:3978": "Lambert Conique Conforme",
+  "EPSG:3995": "Arctique Polaire Stéréo",
+  "EPSG:4326": "WGS84 (lat/lon)",
   "ExtentFullyOOB": "La plage complète des dates sélectionnées n'est plus disponible. La plage des dates sélectionnées a été réinitialisée.",
   "FPS": "IPS",
   "FramesPerSecond": "Images par seconde",
