--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -18,6 +18,10 @@
   "DarkBasemapSwitch": "Dark",
   "DisplayLegend": "Display legend",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
+  "EPSG:3857": "Web Mercator",
+  "EPSG:3978": "Lambert Conic Conformal",
+  "EPSG:3995": "Arctic Polar Stereo",
+  "EPSG:4326": "WGS84 (lat/lon)",
   "ExtentFullyOOB": "The entire selected temporal extent is no longer available. The date range slider has been reset.",
   "FPS": "FPS",
   "FramesPerSecond": "Frames per second",
