Added locale selection, fixed domexception handling, formatting and logging

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -78,6 +78,7 @@
   "RevertColor": "Revert to original color",
   "Reverse": "Play in reverse",
   "ReverseAnimation": "Animate in reverse",
+  "Search": "Search",
   "SelectCRS": "Select projection",
   "SelectMR": "Select model run",
   "Share": "Share",
