--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -78,6 +78,7 @@
   "RevertColor": "Remettre la couleur originale",
   "Reverse": "Lecture à reculons",
   "ReverseAnimation": "Animer à reculons",
+  "Search": "Rechercher",
   "SelectCRS": "Sélectionner la projection",
   "SelectMR": "Sélectionner la passe de modèle",
   "Share": "Partager",
