Bugfixes and formatting

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -44,6 +44,7 @@
   "LayerStyle": "Select layer style",
   "LayerTree": "Add",
   "Loading": "Loading...",
+  "LocalTime": "Locale",
   "Loop": "Loop",
   "LoopRetry": "Service unavailable. Retrying in 45 seconds.",
   "MadeWithAniMet": "Made with MSC AniMet",
@@ -57,7 +58,6 @@
   "MP4CreateDarkMode": "Dark mode",
   "MP4CreateLightMode": "Light mode",
   "MP4CreateNotifyCancelAnimation": "The animation creation has been cancelled given your browser window has been resized",
-  "MP4CreateTimeFormat": "Local time",
   "MP4CreateTitle": "Animate",
   "MP4CreateTitleHint": "Limit of 250 characters",
   "MP4ExportDownload": "Download as MP4",
@@ -78,7 +78,7 @@
   "RevertColor": "Revert to original color",
   "Reverse": "Play in reverse",
   "ReverseAnimation": "Animate in reverse",
-  "Search": "Search",
+  "SearchTZ": "Search time zone",
   "SelectCRS": "Select projection",
   "SelectMR": "Select model run",
   "Share": "Share",
