--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -44,6 +44,7 @@
   "LayerStyle": "Sélectionner le style de la couche",
   "LayerTree": "Ajouter",
   "Loading": "Chargement...",
+  "LocalTime": "Local",
   "Loop": "Lecture en boucle",
   "LoopRetry": "Service non disponible. Nouvelle tentative dans 45 secondes.",
   "MadeWithAniMet": "Créé avec AniMet du SMC",
@@ -57,7 +58,6 @@
   "MP4CreateDarkMode": "Mode foncé",
   "MP4CreateLightMode": "Mode clair",
   "MP4CreateNotifyCancelAnimation": "La création de l'animation a été annulée car la fenêtre de votre navigateur a été redimensionnée.",
-  "MP4CreateTimeFormat": "Heure locale",
   "MP4CreateTitle": "Animer",
   "MP4CreateTitleHint": "Limite de 250 caractères",
   "MP4ExportDownload": "Télécharger au format MP4",
@@ -78,7 +78,7 @@
   "RevertColor": "Remettre la couleur originale",
   "Reverse": "Lecture à reculons",
   "ReverseAnimation": "Animer à reculons",
-  "Search": "Rechercher",
+  "SearchTZ": "Rechercher fuseau horaire",
   "SelectCRS": "Sélectionner la projection",
   "SelectMR": "Sélectionner la passe de modèle",
   "Share": "Partager",
