Added possibility to save output as PNG image

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -72,6 +72,9 @@
   "OtherProperties": "Properties",
   "Overlays": "Overlays",
   "OverlaysTip": "Overlays add information on top of displayed layers.",
+  "PNGCreateButtonLabel": "Create image",
+  "PNGExportDownload": "Download as PNG",
+  "PNGExportSubtitle": "Preview the created image and download using the button below",
   "Portrait": "Portrait",
   "ReplaceLegends": "Legends must be placed inside the frame to appear in the output animation.",
   "ResetRotation": "Reset rotation",
