--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -72,6 +72,9 @@
   "OtherProperties": "Propriétés",
   "Overlays": "Superpositions",
   "OverlaysTip": "Les superpositions ajoutent de l'information au-dessus des couches affichées.",
+  "PNGCreateButtonLabel": "Créer l'image",
+  "PNGExportDownload": "Télécharger au format PNG",
+  "PNGExportSubtitle": "Prévisualiser l'image créée et télécharger à l'aide du bouton ci-dessous",
   "Portrait": "Portrait",
   "ReplaceLegends": "Les légendes doivent être placées dans le cadre pour apparaitre dans l'animation.",
   "ResetRotation": "Réinitialiser la rotation",
