Changed from PNG to 0.9 quality JPEG

--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -29,6 +29,9 @@
   "GeoMetWms": "Ajouter des couches {wmsSource}",
   "GoToHomePage": "Aller à la page d'accueil AniMet du SMC",
   "InvisibleBasemap": "Rendre la carte de fond invisible",
+  "JPEGCreateButtonLabel": "Créer l'image",
+  "JPEGExportDownload": "Télécharger au format JPEG",
+  "JPEGExportSubtitle": "Prévisualiser l'image créée et télécharger à l'aide du bouton ci-dessous",
   "LayerBarClosestTime": "Date la plus proche: ",
   "LayerBarCurrentTooltip": "Actuel",
   "LayerBarEndsTooltip": "Fin",
@@ -72,9 +75,6 @@
   "OtherProperties": "Propriétés",
   "Overlays": "Superpositions",
   "OverlaysTip": "Les superpositions ajoutent de l'information au-dessus des couches affichées.",
-  "PNGCreateButtonLabel": "Créer l'image",
-  "PNGExportDownload": "Télécharger au format PNG",
-  "PNGExportSubtitle": "Prévisualiser l'image créée et télécharger à l'aide du bouton ci-dessous",
   "Portrait": "Portrait",
   "ReplaceLegends": "Les légendes doivent être placées dans le cadre pour apparaitre dans l'animation.",
   "ResetRotation": "Réinitialiser la rotation",
