--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -29,6 +29,9 @@
   "GeoMetWms": "Add {wmsSource} layers",
   "GoToHomePage": "Go to MSC AniMet home page",
   "InvisibleBasemap": "Make basemap invisible",
+  "JPEGCreateButtonLabel": "Create image",
+  "JPEGExportDownload": "Download as JPEG",
+  "JPEGExportSubtitle": "Preview the created image and download using the button below",
   "LayerBarClosestTime": "Closest time: ",
   "LayerBarCurrentTooltip": "Current",
   "LayerBarEndsTooltip": "End",
@@ -72,9 +75,6 @@
   "OtherProperties": "Properties",
   "Overlays": "Overlays",
   "OverlaysTip": "Overlays add information on top of displayed layers.",
-  "PNGCreateButtonLabel": "Create image",
-  "PNGExportDownload": "Download as PNG",
-  "PNGExportSubtitle": "Preview the created image and download using the button below",
   "Portrait": "Portrait",
   "ReplaceLegends": "Legends must be placed inside the frame to appear in the output animation.",
   "ResetRotation": "Reset rotation",
