Time zone serahc now sticky and sticky revert button

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -47,7 +47,7 @@
   "LayerStyle": "Select layer style",
   "LayerTree": "Add",
   "Loading": "Loading...",
-  "LocalTime": "Locale",
+  "LocalTime": "Local",
   "Loop": "Loop",
   "LoopRetry": "Service unavailable. Retrying in 45 seconds.",
   "MadeWithAniMet": "Made with MSC AniMet",
@@ -79,6 +79,7 @@
   "ReplaceLegends": "Legends must be placed inside the frame to appear in the output animation.",
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
+  "RevertTimeZone": "Revert to your browser's time zone",
   "Reverse": "Play in reverse",
   "ReverseAnimation": "Animate in reverse",
   "SearchTZ": "Search time zone",
