--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -79,6 +79,7 @@
   "ReplaceLegends": "Les légendes doivent être placées dans le cadre pour apparaitre dans l'animation.",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
+  "RevertTimeZone": "Remettre le fuseau de votre navigateur",
   "Reverse": "Lecture à reculons",
   "ReverseAnimation": "Animer à reculons",
   "SearchTZ": "Rechercher fuseau horaire",
