Added dropdown to select image/video output

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -73,6 +73,7 @@
   "NotFoundSub": "The page you are looking for does not exist.",
   "NoTimeTooltip": "Layer has no temporal dimension",
   "OtherProperties": "Properties",
+  "OutputFormat": "Output format",
   "Overlays": "Overlays",
   "OverlaysTip": "Overlays add information on top of displayed layers.",
   "Portrait": "Portrait",
