--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -73,6 +73,7 @@
   "NotFoundSub": "La page que vous recherchez est introuvable.",
   "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
   "OtherProperties": "Propriétés",
+  "OutputFormat": "Format de sortie",
   "Overlays": "Superpositions",
   "OverlaysTip": "Les superpositions ajoutent de l'information au-dessus des couches affichées.",
   "Portrait": "Portrait",
